# tmux-pomodoro

./: .gitignore  CHANGELOG.md  README.md  flake.nix  main.tmux
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/config/: release-please-config.json
.github/configs/: release-please-config.json  release-please-manifest.json
.github/scripts/: update-flake-hashes.py
.github/settings/: release-please-manifest.json
.github/workflows/: ci.yml  please.yml  release.yml  test.yml  update.yml
crates/pomodoro/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  flake.nix
crates/pomodoro/src/: cli.rs  main.rs
crates/pomodoro/src/app/: cli.rs  cmd.rs
crates/pomodoro/src/hook/: run.rs
crates/pomodoro/src/state/: model.rs  query.rs  query.sql  schema.rs  schema.sql
crates/pomodoro/tests/: integration.rs
scripts/: tmux_core.sh  tmux_pomodoro.sh  tmux_pomodoro_cmd.sh
tests/: test_helper.bash
