[package]
name = "pomodoro"
version = "0.1.1"
edition = "2021"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
rusqlite = { version = "0.38.0", features = ["bundled", "chrono", "uuid"] }
humantime = "2.3.0"
xdg = "3.0.0"
anyhow = "1.0.102"
chrono = { version = "0.4.43", features = ["serde"] }
regex = "1.12.3"
uuid = { version = "1.21.0", features = ["serde", "v7"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
minijinja = { version = "2", features = ["builtins"] }
toml = "1.0.3"
humantime-serde = "1.1.1"

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.4"
