[package]
name = "pomodoro"
version = "0.6.0"
edition = "2021"
description = "A simple Pomodoro timer CLI"
license = "MIT"
license-file = "LICENSE"
documentation = "https://github.com/tmux-contrib/tmux-pomodoro"
homepage = "https://github.com/tmux-contrib/tmux-pomodoro"
repository = "https://github.com/tmux-contrib/tmux-pomodoro"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
rusqlite = { version = "0.39.0", features = ["bundled", "chrono", "uuid"] }
humantime = "2.3.0"
xdg = "3.0.0"
anyhow = "1.0.102"
chrono = { version = "0.4.44", features = ["serde"] }
regex = "1.12.3"
uuid = { version = "1.23.0", features = ["serde", "v7"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
minijinja = { version = "2", features = ["builtins"] }
toml = "1.1.2"
humantime-serde = "1.1.1"

[dev-dependencies]
assert_cmd = "2.2.0"
predicates = "3.1.4"
